# c2pa-vtt

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/: base64.rs  binding.rs  bridge.rs  embed.rs  error.rs  extract.rs  lib.rs
tests/: bridge_c2pa.rs  e2e.rs
tests/fixtures/: captions.vtt  minimal.vtt
