[package]
name = "c2pa-vtt"
version = "0.1.0"
edition = "2021"
description = "C2PA manifest embedding for WebVTT subtitle and caption files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/writerslogic/c2pa-vtt"
keywords = ["c2pa", "provenance", "webvtt", "subtitles", "captions"]
categories = ["encoding", "parser-implementations"]

[dependencies]
